Actions
Bug #17756
closedStringScanner#charpos makes segmentation fault when target.byteslice returns non string value
Bug #17756:
StringScanner#charpos makes segmentation fault when target.byteslice returns non string value
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.0.0p0 (2020-12-25 revision 95aff21468) [x86_64-darwin20]
Description
GH-PR: https://github.com/ruby/strscan/pull/20
This is a strscan issue.
I'm not sure the best way of how to handle bundled libraries tickets since they are Gemfied.
So I created this ticket just in case.
This code makes segmentation fault.
Files
Updated by kachick (Kenichi Kamiya) over 5 years ago
- Status changed from Open to Closed
Applied in changeset git|564ccd095a9d7fbe869031dbf666d61dadfdcb03.
[ruby/strscan] Fix segmentation fault of StringScanner#charpos when String#byteslice returns non string value [Bug #17756] (#20)
Updated by nagachika (Tomoyuki Chikanaga) almost 5 years ago
- Backport changed from 2.5: UNKNOWN, 2.6: UNKNOWN, 2.7: UNKNOWN, 3.0: UNKNOWN to 2.6: UNKNOWN, 2.7: REQUIRED, 3.0: REQUIRED
Updated by nagachika (Tomoyuki Chikanaga) almost 5 years ago
- Backport changed from 2.6: UNKNOWN, 2.7: REQUIRED, 3.0: REQUIRED to 2.6: UNKNOWN, 2.7: REQUIRED, 3.0: DONE
ruby_3_0 7b55ff21b52e818819b698326f80158643175645 merged revision(s) 564ccd095a9d7fbe869031dbf666d61dadfdcb03.
Actions