[ruby/strscan] Fix segmentation fault of `StringScanner#charpos` when `String#byteslice` returns non string value [Bug #17756] (#20)

https://github.com/ruby/strscan/commit/92961cde2b